changed logic for account value edit to use categories mechanism

--- a/src/assets/i18n/en-US.json
+++ b/src/assets/i18n/en-US.json
@@ -212,5 +212,9 @@
     "uah": "Hryvnia (₴)",
     "usd": "Dollar ($)",
     "eur": "Euro (€)"
+  },
+
+  "predefinedCategories": {
+    "adjustments": "Adjustments"
   }
 }
