--- a/src/assets/i18n/uk-UA.json
+++ b/src/assets/i18n/uk-UA.json
@@ -212,5 +212,9 @@
     "uah": "Гривня (₴)",
     "usd": "Долар ($)",
     "eur": "Євро (€)"
+  },
+
+  "predefinedCategories": {
+    "adjustments": "Коригування"
   }
 }
