init for snapshots

--- a/src/assets/i18n/uk-UA.json
+++ b/src/assets/i18n/uk-UA.json
@@ -142,6 +142,9 @@
     "pageTitle": "Статистика",
     "monthlyStatistics": {
       "conversionTooltip": "Всі снапшоти конвертовані в поточну валюту"
+    },
+    "snapshots": {
+      "title": "Снапшоти"
     }
   },
 
