progress bar for snapshot

--- a/src/assets/i18n/en-US.json
+++ b/src/assets/i18n/en-US.json
@@ -148,7 +148,9 @@
       "expense": "Expense",
       "monthBalance": "Month balance",
       "fullBalance": "Full balance",
-      "categories": "Categories:<br>Income - {{ incomeCategories }}<br>Expense - {{ expenseCategories }}"
+      "categories": "Categories:<br>Income - {{ incomeCategories }}<br>Expense - {{ expenseCategories }}",
+      "incomePercent": "Income - {{ percent }}",
+      "expensePercent": "Expense - {{ percent }}"
     }
   },
 
