--- a/src/assets/i18n/uk-UA.json
+++ b/src/assets/i18n/uk-UA.json
@@ -149,7 +149,9 @@
       "expense": "Витрати",
       "monthBalance": "Баланс за місяць",
       "fullBalance": "Повний баланс",
-      "categories": "Категорії:<br>Дохід - {{incomeCategories}}<br>Витрати - {{expenseCategories}}"
+      "categories": "Категорії:<br>Дохід - {{incomeCategories}}<br>Витрати - {{expenseCategories}}",
+      "incomePercent": "Дохід - {{ percent }}",
+      "expensePercent": "Витрати - {{ percent }}"
     }
   },
 
