al flows to event bus, removed action listener service

--- a/src/assets/i18n/en-US.json
+++ b/src/assets/i18n/en-US.json
@@ -235,7 +235,8 @@
     },
     "activityLog": {
       "addRecordFailed": "Failed to add record.",
-      "removeRecordFailed": "Failed to remove record."
+      "removeRecordFailed": "Failed to remove record.",
+      "removeAllRecordsFailed": "Failed to remove all records."
     }
   }
 }
