--- a/src/assets/i18n/uk-UA.json
+++ b/src/assets/i18n/uk-UA.json
@@ -8,27 +8,19 @@
     "logoutConfirmation": "Ви впевнені, що хочете вийти?"
   },
 
-  "dashboard": {
-    "pageTitle": "Дошка",
-
-    "infoCards": {
-      "income": "Дохід",
-      "expense": "Витрати",
-      "currentMonthBalance": "Баланс за місяць",
-      "fullBalance": "Повний баланс",
-      "accounts": {
-        "title": "Рахунки",
-        "titleWithAmount": "Рахунки ({{ accountsAmount }})",
-        "hoverTip": "Ваші рахунки (натисніть)"
-      },
-      "accountCard": {
-        "menu": {
-          "remove": "Видалити"
-        },
-        "removeConfirmationQuestion": "Ви хочете видалити рахунок <b>{{ accountName }}</b>?"
-      }
+  "account": {
+    "fullBalance": "Повний баланс",
+    "accountsInfoCard": {
+      "title": "Рахунки",
+      "titleWithAmount": "Рахунки ({{ accountsAmount }})",
+      "hoverTip": "Ваші рахунки (натисніть)"
     },
-
+    "accountCard": {
+      "menu": {
+        "remove": "Видалити"
+      },
+      "removeConfirmationQuestion": "Ви хочете видалити рахунок <b>{{ accountName }}</b>?"
+    },
     "addAccountModal": {
       "title": "Додати рахунок",
       "accountNameTitle": "Назва рахунку",
@@ -41,7 +33,6 @@
       "accountExistsError": "Такий рахунок вже існує",
       "accountNameLengthError": "Макс. довжина імені рахунку - 20"
     },
-
     "moneyMovementBetweenAccountsModal": {
       "title": "Переміщення грошей між рахунками",
       "fromAccountTitle": "З рахунку",
@@ -50,58 +41,43 @@
       "convertedValueToMoveTitle": "Конвертоване значення",
       "moveButton": "Перемістити"
     },
-
     "accountsListModal": {
-      "title": "Accounts ({{ accountsAmount }})",
+      "title": "Рахунки ({{ accountsAmount }})",
       "closeButton": "Вихід"
-    },
+    }
+  },
 
-    "activityLog": {
-      "title": "Журнал активності",
-      "categoriesResetRecord": {
-        "income": "Категорії <b>доходів</b> було скинуто",
-        "expense": "Категорії <b>витрат</b> було скинуто"
-      },
-      "categoryValueChangeRecord": {
-        "removeConfirmationQuestion": "Ви хочете видалити цей запис?",
-        "removeConfirmationRemark": "Ця дія відмінить зроблені цим записом зміни і вплине на рахунок <span class='font-bold'>{{ accountName }}</span> і категорію <span class='font-bold'>{{ categoryName }}</span>"
-      },
-      "currencyChangeRecord": "Валюту змінено",
-      "emptyStateText": "Немає даних для відображення",
-      "removeButtonTooltip": "Видалити всі записи",
-      "allRecordsRemoveConfirmationQuestion": "Ви дійсно хочете видалити всі записи?"
+  "category": {
+    "infoCards": {
+      "income": "Дохід",
+      "expense": "Витрати",
+      "currentMonthBalance": "Баланс за місяць"
     },
-
-    "categories": {
-      "income": {
-        "title": "Дохід",
-        "resetConfirmationQuestion": "Ви хочете скинути всі категорії <b>доходів</b>?"
-      },
-      "expense": {
-        "title": "Витрати",
-        "resetConfirmationQuestion": "Ви хочете скинути всі категорії <b>витрат</b>?"
-      },
+    "income": {
+      "title": "Дохід",
+      "resetConfirmationQuestion": "Ви хочете скинути всі категорії <b>доходів</b>?"
+    },
+    "expense": {
+      "title": "Витрати",
+      "resetConfirmationQuestion": "Ви хочете скинути всі категорії <b>витрат</b>?"
+    },
+    "menu": {
+      "addCategory": "Додати категорію",
+      "resetCategories": "Скинути категорії"
+    },
+    "emptyStateText": "Немає даних для відображення",
+    "tabs": {
+      "list": "Список",
+      "chart": "Графік"
+    },
+    "categoryItem": {
       "menu": {
-        "addCategory": "Додати категорію",
-        "resetCategories": "Скинути категорії"
+        "addValue": "Додати значення",
+        "resetValue": "Скинути значення",
+        "remove": "Видалити"
       },
-      "emptyStateText": "Немає даних для відображення",
-
-      "tabs": {
-        "list": "Список",
-        "chart": "Графік"
-      },
-
-      "categoryItem": {
-        "menu": {
-          "addValue": "Додати значення",
-          "resetValue": "Скинути значення",
-          "remove": "Видалити"
-        },
-        "removeConfirmationQuestion": "Ви хочете видалити категорію <b>{{ categoryName }}</b>?"
-      }
+      "removeConfirmationQuestion": "Ви хочете видалити категорію <b>{{ categoryName }}</b>?"
     },
-
     "addCategoryModal": {
       "income": {
         "title": "Додати категорію до доходів"
@@ -117,7 +93,6 @@
       "categoryExistsError": "Така категорія вже існує",
       "categoryNameLengthError": "Макс. довжина імені категорії - 25"
     },
-
     "categoryValueModal": {
       "subtitle": "Додати значення до категорії",
       "cancel": "Вихід",
@@ -127,6 +102,26 @@
       "noteTitle": "Примітка",
       "accountsTitle": "Використати рахунок"
     }
+  },
+
+  "activityLog": {
+    "title": "Журнал активності",
+    "categoriesResetRecord": {
+      "income": "Категорії <b>доходів</b> було скинуто",
+      "expense": "Категорії <b>витрат</b> було скинуто"
+    },
+    "categoryValueChangeRecord": {
+      "removeConfirmationQuestion": "Ви хочете видалити цей запис?",
+      "removeConfirmationRemark": "Ця дія відмінить зроблені цим записом зміни і вплине на рахунок <span class='font-bold'>{{ accountName }}</span> і категорію <span class='font-bold'>{{ categoryName }}</span>"
+    },
+    "currencyChangeRecord": "Валюту змінено",
+    "emptyStateText": "Немає даних для відображення",
+    "removeButtonTooltip": "Видалити всі записи",
+    "allRecordsRemoveConfirmationQuestion": "Ви дійсно хочете видалити всі записи?"
+  },
+
+  "dashboard": {
+    "pageTitle": "Дошка"
   },
 
   "statistics": {
@@ -207,5 +202,37 @@
 
   "predefinedCategories": {
     "adjustments": "Коригування"
+  },
+
+  "errors": {
+    "unknownError": "Щось пішло не так! Будь ласка, спробуйте ще.",
+    "auth": {
+      "loginFailed": "Помилка входу! Будь ласка, спробуйте ще."
+    },
+    "metadata": {
+      "initMetadataDBFailed": "Не вдалося ініціалізувати базу даних метаданих.",
+      "changeLanguageFailed": "Не вдалося змінити мову.",
+      "changeCurrencyFailed": "Не вдалося змінити валюту."
+    },
+    "account": {
+      "addAccountFailed": "Не вдалося додати рахунок.",
+      "removeAccountFailed": "Не вдалося видалити рахунок.",
+      "changeAccountsOrderFailed": "Не вдалося змінити порядок рахунків.",
+      "moveMoneyBetweenAccountsFailed": "Не вдалося перемістити гроші між рахунками.",
+      "changeAccountValueFailed": "Не вдалося змінити значення рахунку."
+    },
+    "category": {
+      "initCategoryDBFailed": "Не вдалося ініціалізувати базу даних категорій.",
+      "updateCategoriesFailed": "Не вдалося оновити категорії.",
+      "createCategoryFailed": "Не вдалося створити категорію.",
+      "removeCategoryFailed": "Не вдалося видалити категорію.",
+      "resetCategoriesFailed": "Не вдалося скинути категорії.",
+      "changeCategoryValueFailed": "Не вдалося змінити значення категорії."
+    },
+    "activityLog": {
+      "addRecordFailed": "Не вдалося додати запис.",
+      "removeRecordFailed": "Не вдалося видалити запис.",
+      "removeAllRecordsFailed": "Не вдалося видалити всі записи."
+    }
   }
 }
