--- a/src/assets/i18n/en-US.json
+++ b/src/assets/i18n/en-US.json
@@ -223,18 +223,16 @@
       "addAccountFailed": "Failed to add account.",
       "removeAccountFailed": "Failed to remove account.",
       "changeAccountsOrderFailed": "Failed to change accounts order.",
-      "moveMoneyBetweenAccountsFailed": "Failed to move money between accounts.",
-      "changeAccountValueFailed": "Failed to change account value."
+      "moveMoneyBetweenAccountsFailed": "Failed to move money between accounts."
     },
     "category": {
       "updateCategoriesFailed": "Failed to update categories.",
       "createCategoryFailed": "Failed to create category.",
       "removeCategoryFailed": "Failed to remove category.",
       "resetCategoriesFailed": "Failed to reset categories.",
-      "changeCategoryValueFailed": "Failed to change category value."
+      "changeCategoryValueFlowFailed": "Failed to finish change category value flow."
     },
     "activityLog": {
-      "addRecordFailed": "Failed to add record.",
       "removeRecordFailed": "Failed to remove record.",
       "removeAllRecordsFailed": "Failed to remove all records."
     }
