category transaction modal improvements

--- a/src/assets/i18n/en-US.json
+++ b/src/assets/i18n/en-US.json
@@ -110,7 +110,8 @@
       "valueToAddTitle": "Value to add",
       "convertedValueToAddTitle": "Converted value",
       "noteTitle": "Note",
-      "accountsTitle": "Account to use"
+      "accountsTitle": "Account to use",
+      "addAccount": "Add account"
     }
   },
 
