--- a/src/assets/i18n/uk-UA.json
+++ b/src/assets/i18n/uk-UA.json
@@ -108,7 +108,8 @@
       "valueToAddTitle": "Значення",
       "convertedValueToAddTitle": "Конвертоване значення",
       "noteTitle": "Примітка",
-      "accountsTitle": "Використати рахунок"
+      "accountsTitle": "Використати рахунок",
+      "addAccount": "Додати рахунок"
     }
   },
 
